--- a/www/css/home.css
+++ b/www/css/home.css
@@ -41,18 +41,12 @@ li a {
 #img-avatar{
     width: 180px;
     padding-top: 40px;
-    
 }  
 #img-camera{
     width: 55px;
     position: relative;
     top:-85px;
     margin-right: 30px;
-}
-#file{
-    position:relative;
-    top:50px;
-    left: 230px;
 }
 #sendImage{
     position: relative;
@@ -64,4 +58,24 @@ li a {
 }  
 #img-logo-home{
     width: 60px;
+}
+.btn-upload {
+    position: relative;
+    top: 65px;
+    left: 200px;
+    overflow: hidden;
+    display: inline-block;
+}
+.btn-upload input[type=file] {
+    position: absolute;
+    opacity: 0;
+    z-index: 0;
+    max-width: 100%;
+    height: 100%;
+    display: block;
+}
+.btn-upload .btn{
+    padding: 8px 20px;
+    background: #ffffff;
+    border: 0;
 }
