--- a/www/css/home.css
+++ b/www/css/home.css
@@ -7,7 +7,7 @@
     border: none;
 }
 body {
-    background-color: rgba(97, 200, 231, 0.411);
+    background-color: #61c8e769;
     background-size: cover;
     background-position-y: -200px;
 }
@@ -48,13 +48,11 @@ li a {
     top:-85px;
     margin-right: 30px;
 }
-#sendImage{
-    position: relative;
-    right: 10px;
-}
 #cameraApp{
     position: relative;
     right: 180px;
+    overflow: hidden;
+    display: inline-block;
 }  
 #img-logo-home{
     width: 60px;
@@ -75,6 +73,27 @@ li a {
     display: block;
 }
 .btn-upload .btn{
+    padding: 8px 20px;
+    background: #ffffff;
+    border: 0;
+}
+.btn-action {
+    position: relative;
+    top: 65px;
+    right: 70px;
+    overflow: hidden;
+    display: inline-block;
+    background: #ffffff;
+}
+.btn-action input[type=file] {
+    position: absolute;
+    opacity: 0;
+    z-index: 0;
+    max-width: 100%;
+    height: 100%;
+    display: block;
+}
+.btn-action .btn{
     padding: 8px 20px;
     background: #ffffff;
     border: 0;
