--- a/www/css/home.css
+++ b/www/css/home.css
@@ -43,14 +43,15 @@ li a {
     padding-top: 40px;
 }  
 #img-camera{
-    width: 55px;
+    max-width: 100%;
+    height: 100%;
     position: relative;
     top:-85px;
     margin-right: 30px;
 }
 #cameraApp{
     position: relative;
-    right: 180px;
+    right: 140px;
     overflow: hidden;
     display: inline-block;
 }  
