Aletrações  na pagina de redefinir senha

--- a/www/css/resetPass.css
+++ b/www/css/resetPass.css
@@ -1,93 +1,94 @@
+/*imagem-logo*/
 .imglogo{
-    border-radius: none;
-    width: 200px;
-    margin-top: -30px;
+  border-radius: none;
+  width: 245px;
+  margin-top: -30px;
 }
-* {/*fonts da pagina*/
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Helvetica;
-    color: #323232;
-    border: none;
-  }
-  body {
-    background-color: rgba(97, 200, 231, 0.411);
-    background-size: cover;
-    background-position-y: -200px;
-  }
-  textarea:focus, input:focus{
-    outline: none;
-  } 
-  a {
-    font-size: .8rem;
-  } 
-  a:hover {/*mudança de cor para os os links*/
-    color: #08558B;
-  } 
-
-  #resetPass-container { /* container login */
-    background-color: #FFF;
-    margin-left: auto;
-    margin-right: auto;
-    width: 400px;
-    padding: 25px 25px;
-    margin-top: 50px;
-    border-radius: 10px;
-    text-align: center;
-  }
+*{/*fonts da pagina*/
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Helvetica;
+  color: #323232;
+  border: none;
+}
+body {
+  background-color: rgba(97, 200, 231, 0.411);
+  background-size: cover;
+  background-position-y: -200px;
+}
+textarea:focus, input:focus{
+  outline: none;
+} 
+a {
+   font-size: .8rem;
+   position: relative;
+   top:20px;
+} 
+a:hover {/*mudança de cor para os os links*/
+  color: #08558B;
+} 
+#login-container { /* container login */
+  background-color: #FFF;
+  margin-left: auto;
+  margin-right: auto;
+  width: 410px;
+  padding: 25px 25px;
+  margin-top: 30px;
+  border-radius: 10px;
+  text-align: center;
+}
 /* formulário */
-  form {
-    margin-top: 30px;
-    margin-bottom: 40px;
+form {
+  margin-top: 30px;
+  margin-bottom: 40px;
+}
+label, input {/*elementos do formulario (email e senha)*/
+  display: block;
+  width: 100%;
+  text-align: left;
+} 
+label {
+  font-weight: bold;
+  font-size: .8rem;
+  position: relative;
+  top: 30px;
+}
+input {/*barinha de campo de formulario*/
+  border-bottom: 2px solid #323232;
+  padding: 10px;
+  font-size: 1rem;
+  margin-bottom: 20px;
+  position: relative;
+  top:30px;
+}
+input:focus {/*foco na hora de preencher o formulario*/
+  border-bottom: 2px solid rgba(97, 200, 231, 0.87);
+}
+#forgot-pass {/*link "esqueceu a senha"*/
+  display: block;
+  text-align: right;
+}
+.buttom-entrar {/*botão*/ 
+  position:relative;
+  top: 45px;
+  padding: 7px 120px;
+  text-align: center;
+  text-transform: uppercase;
+  border-radius: 20px;
+  cursor: pointer;
+  color: #FFF;
+  background-color:rgba(97, 200, 231, 0.87);
+  font-weight: bold;
+}
+.buttom-entrar:hover {/*mudança de cor do botão*/
+  background-color: rgba(62, 171, 204, 0.87);
+  transition: .5s;
+}
+  /* link "cadastre-se" */
+  #register-container{
+    padding-top: 55px;
   }
-  label, input {/*elementos do formulario (email e senha)*/
-    display: block;
-    width: 347px;
-    text-align: left;
-    position: absolute;
-    top: 60%;
-  } 
-  label {
-    font-weight: bold;
-    font-size: .8rem;
+  #redirecionar-container{
+    padding-top: 85px;
   }
-  input {/*barinha de campo de formulario*/
-    border-bottom: 2px solid #323232;
-    padding: 10px;
-    font-size: 1rem;
-    margin-bottom: 20px;
-  }
-  
-  input:focus {/*foco na hora de preencher o formulario*/
-    border-bottom: 2px solid rgba(97, 200, 231, 0.87);;
-  }
-  .button-reset {/*botão*/   
-    position:absolute; 
-    top:190%;
-    left:50%;
-    transform: translate(-50%, -2450%);
-    padding: 7px 110px;
-    text-align: center;
-    text-transform: uppercase;
-    border-radius: 20px;
-    cursor: pointer;
-    color: #FFF;
-    background-color:rgba(97, 200, 231, 0.87);
-    font-weight: bold;
-  }
-  .button-reset:hover {/*mudança de cor do botão*/
-    background-color: rgba(62, 171, 204, 0.87);
-    transition: .5s;
-  }
-  /* registrar */
-  #register-container p {
-    margin-bottom: 15px;
-  }
-  #container-redirecionar{
-    padding-top:215px;
-  }
-  .message{
-    color: #05050579;
-  }
-
