--- a/www/css/home.css
+++ b/www/css/home.css
@@ -42,13 +42,7 @@ li a {
     width: 180px;
     padding-top: 40px;
 }  
-#img-camera{
-    max-width: 100%;
-    height: 100%;
-    position: relative;
-    top:-85px;
-    margin-right: 30px;
-}
+
 #cameraApp{
     position: relative;
     right: 140px;
@@ -98,4 +92,9 @@ li a {
     padding: 8px 20px;
     background: #ffffff;
     border: 0;
+}
+#image{
+    position: relative;
+    top: 90px;
+    right: 70;
 }
