--- a/www/css/home.css
+++ b/www/css/home.css
@@ -16,7 +16,7 @@ body {
     margin-left: auto;
     margin-right: auto;
     width: 410px;
-    padding: 25px 25px;
+    padding: 50px 25px;
     margin-top: 30px;
     border-radius: 10px;
     text-align: center;
@@ -45,7 +45,7 @@ li a {
 
 #cameraApp{
     position: relative;
-    right: 140px;
+    right: 85px;
     overflow: hidden;
     display: inline-block;
 }  
@@ -92,6 +92,36 @@ li a {
     padding: 8px 20px;
     background: #ffffff;
     border: 0;
+}
+.bnt-cancel{
+    position: relative;
+    top: 39px;
+    left: 0px;
+    overflow: hidden;
+    display: inline-block;
+}
+.btn-cancel button {
+    position: absolute;
+    opacity: 0;
+    z-index: 0;
+    max-width: 100%;
+    height: 100%;
+    display: block;
+}
+.bnt-confirm{
+    position: relative;
+    top: 39px;
+    right: 65px;
+    overflow: hidden;
+    display: inline-block;
+}
+.btn-confirm button {
+    position: absolute;
+    opacity: 0;
+    z-index: 0;
+    max-width: 100%;
+    height: 100%;
+    display: block;
 }
 #image{
     position: relative;
