--- a/www/css/home.css
+++ b/www/css/home.css
@@ -44,6 +44,7 @@ li a {
 
 #cameraApp{
     position: relative;
+    top: -1px;
     right: 85px;
     overflow: hidden;
     display: inline-block;   
